# anomaly-detection-server

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-local.yml  load_data.py  pyproject.toml
.github/workflows/: main.yml
src/: config.py  database.py  logging_config.py  main.py  models.py  redis.py  utils.py
src/routers/: sse.py  transaction.py  users.py
tests/: conftest.py  test_main.py  test_transactions.py  test_users.py
