[project]
name = "anomaly-detection-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.119.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
    "redis[hiredis]>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
